--- a/sass/input.scss
+++ b/sass/input.scss
@@ -1,4 +1,5 @@
 /* Base Style */
+
 * {
   margin: 0px;
   padding: 0px;
@@ -23,6 +24,7 @@ body {
 
 .sidebar {
   background-color: red;
+  //   grid-row: 1/-1;
   grid-row: 1/7;
 }
 
@@ -43,6 +45,7 @@ body {
 
 .home {
   background-color: burlywood;
+
   grid-column: 3/11;
 }
 
@@ -60,5 +63,3 @@ body {
   background-color: cadetblue;
   grid-column: 2/12;
 }
-
-/*# sourceMappingURL=index.css.map */
