--- a/index.css
+++ b/index.css
@@ -39,8 +39,24 @@ body {
 .features {
   background-color: blue;
   grid-column: center-start/center-end;
+  display: grid;
+  margin-top: 12rem;
+  margin-bottom: 12rem;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
 }
 
+.feature {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-row-gap: 1rem;
+  grid-column-gap: 1rem;
+}
+.feature__icon {
+  width: 3rem;
+  height: 3rem;
+  grid-row: 1/3;
+}
 .homes {
   background-color: burlywood;
   grid-column: center-start/center-end;
