--- a/sass/input.scss
+++ b/sass/input.scss
@@ -1,15 +1,6 @@
 /* Base Style */
 
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-
-html {
-  /* 1rem = 10px; */
-  font-size: 62.5%;
-}
+@use "./base.scss";
 
 body {
   font-family: "Courier New", Courier, monospace;
@@ -44,6 +35,35 @@ body {
 .features {
   background-color: blue;
   grid-column: center-start / center-end;
+  display: grid;
+
+  margin-top: 12rem;
+  margin-bottom: 12rem;
+
+  grid-template-columns: repeat(3, 1fr);
+
+  gap: 1rem;
+}
+
+.feature {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  // gap: 1rem;
+  // grid-column-gap: 1rem;
+  // grid-row-gap: 1rem;
+  grid-row-gap: 1rem;
+
+  grid-column-gap: 1rem;
+
+  &__icon {
+    width: 3rem;
+    height: 3rem;
+    grid-row: 1 / 3;
+    // fill: ;
+  }
+
+  &__content {
+  }
 }
 
 .homes {
