--- a/sass/input.scss
+++ b/sass/input.scss
@@ -33,27 +33,34 @@ body {
 }
 
 .features {
-  background-color: blue;
   grid-column: center-start / center-end;
   display: grid;
 
   margin-top: 12rem;
   margin-bottom: 12rem;
 
-  grid-template-columns: repeat(3, 1fr);
+  // grid-template-columns: repeat(3, 1fr);
+
+  grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
+
+  // background-color: red;
+
+  // line-height: 1rem;
 
   gap: 1rem;
+
+  line-height: 2rem;
+
+  // padding: 1rem;
 }
 
 .feature {
   display: grid;
   grid-template-columns: min-content 1fr;
-  // gap: 1rem;
-  // grid-column-gap: 1rem;
-  // grid-row-gap: 1rem;
   grid-row-gap: 1rem;
 
   grid-column-gap: 1rem;
+  // background-color: red;
 
   &__icon {
     width: 3rem;
