--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ body {
   display: grid;
   margin-top: 12rem;
   margin-bottom: 12rem;
-  grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 3fr));
   gap: 1rem;
   line-height: 2rem;
 }
@@ -58,13 +58,54 @@ body {
   grid-row: 1/3;
 }
 .homes {
-  background-color: burlywood;
   grid-column: center-start/center-end;
+  margin: 10rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 2.2rem;
+}
+
+.home {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 22px;
+  position: relative;
+}
+.home__image {
+  grid-column: 1/-1;
+  width: 100%;
+}
+.home__button {
+  border: none;
+  grid-column: 1/-1;
+  padding: 12px;
+}
+.home__icon {
+  width: 1.4rem;
+  height: 1.4rem;
+}
+.home__roomcounts, .home__location, .home__price, .home__area {
+  display: flex;
+  margin-left: 2rem;
+  align-items: center;
+  column-gap: 1rem;
+}
+.home__location, .home__roomcounts {
+  margin-top: 1.5rem;
+}
+.home__name {
+  background-color: red;
+  grid-column: 1/3;
+  justify-self: center;
+  padding: 12px;
+  position: absolute;
+  top: 55%;
+  color: white;
 }
 
 .story {
   background-color: bisque;
-  grid-column: center-start/center-end;
+  grid-column: full-start/full-end;
 }
 
 .img__galleries {
