--- a/sass/input.scss
+++ b/sass/input.scss
@@ -41,11 +41,7 @@ body {
 
   // grid-template-columns: repeat(3, 1fr);
 
-  grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
-
-  // background-color: red;
-
-  // line-height: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 3fr));
 
   gap: 1rem;
 
@@ -74,13 +70,70 @@ body {
 }
 
 .homes {
-  background-color: burlywood;
   grid-column: center-start / center-end;
+  margin: 10rem 0;
+
+  display: grid;
+
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+
+  gap: 2.2rem;
+}
+
+.home {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  row-gap: 22px;
+
+  position: relative;
+
+  &__image {
+    grid-column: 1/-1;
+    width: 100%;
+  }
+
+  &__button {
+    // background-color: red;
+    border: none;
+    grid-column: 1/-1;
+    padding: 12px;
+  }
+
+  &__icon {
+    width: 1.4rem;
+    height: 1.4rem;
+  }
+
+  &__roomcounts,
+  &__location,
+  &__price,
+  &__area {
+    display: flex;
+    margin-left: 2rem;
+    align-items: center;
+    column-gap: 1rem;
+  }
+
+  &__location,
+  &__roomcounts {
+    margin-top: 1.5rem;
+  }
+
+  &__name {
+    background-color: red;
+    grid-column: 1/3;
+    justify-self: center;
+    padding: 12px;
+    position: absolute;
+    top: 55%;
+    color: white;
+  }
 }
 
 .story {
   background-color: bisque;
-  grid-column: center-start / center-end;
+  grid-column: full-start / full-end;
 }
 
 .img__galleries {
