--- a/index.css
+++ b/index.css
@@ -68,11 +68,15 @@ body {
 .home {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  transition: all 0.2s;
   row-gap: 22px;
-  position: relative;
+}
+.home:hover {
+  transform: translateY(-1rem);
 }
 .home__image {
   grid-column: 1/-1;
+  grid-row: 1/2;
   width: 100%;
 }
 .home__button {
@@ -96,10 +100,11 @@ body {
 .home__name {
   background-color: red;
   grid-column: 1/3;
-  justify-self: center;
   padding: 12px;
-  position: absolute;
-  top: 55%;
+  grid-row: 1/2;
+  justify-self: center;
+  align-self: end;
+  transform: translateY(50%);
   color: white;
 }
 
