--- a/sass/input.scss
+++ b/sass/input.scss
@@ -83,13 +83,16 @@ body {
 .home {
   display: grid;
   grid-template-columns: 1fr 1fr;
-
+  transition: all 0.2s;
   row-gap: 22px;
 
-  position: relative;
+  &:hover {
+    transform: translateY(-1rem);
+  }
 
   &__image {
     grid-column: 1/-1;
+    grid-row: 1/2;
     width: 100%;
   }
 
@@ -123,10 +126,14 @@ body {
   &__name {
     background-color: red;
     grid-column: 1/3;
-    justify-self: center;
+    // justify-self: center;
     padding: 12px;
-    position: absolute;
-    top: 55%;
+    grid-row: 1/2;
+    justify-self: center;
+    align-self: end;
+
+    transform: translateY(50%);
+
     color: white;
   }
 }
