--- a/index.css
+++ b/index.css
@@ -100,9 +100,9 @@ body {
 .home__name {
   background-color: red;
   grid-column: 1/3;
+  justify-self: center;
   padding: 12px;
   grid-row: 1/2;
-  justify-self: center;
   align-self: end;
   transform: translateY(50%);
   color: white;
@@ -121,6 +121,29 @@ body {
 .footer {
   background-color: cadetblue;
   grid-column: full-start/full-end;
+  padding: 3rem 3rem;
+}
+
+.footer .nav {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  grid-gap: 2rem;
+  align-items: center;
+}
+.footer .nav__link:link, .footer .nav__link:visited {
+  font-size: 1.4rem;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1.5rem;
+  display: block;
+  transition: all 1s;
+}
+.footer .nav__link:hover, .footer .nav__link:active {
+  background-color: rgba(255, 255, 255, 0.05);
+  transform: translateY(-1.2rem);
 }
 
 /*# sourceMappingURL=index.css.map */
