--- a/index.css
+++ b/index.css
@@ -112,6 +112,12 @@ body {
   background-color: bisque;
   grid-column: full-start/full-end;
 }
+.story__picture {
+  background-color: red;
+}
+.story__content {
+  background-color: blue;
+}
 
 .img__galleries {
   background-color: aquamarine;
@@ -144,6 +150,14 @@ body {
 .footer .nav__link:hover, .footer .nav__link:active {
   background-color: rgba(255, 255, 255, 0.05);
   transform: translateY(-1.2rem);
+}
+
+.copyright {
+  text-align: center;
+  overflow: hidden;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*# sourceMappingURL=index.css.map */
