--- a/sass/input.scss
+++ b/sass/input.scss
@@ -62,7 +62,6 @@ body {
     width: 3rem;
     height: 3rem;
     grid-row: 1 / 3;
-    // fill: ;
   }
 
   &__content {
@@ -138,6 +137,14 @@ body {
 .story {
   background-color: bisque;
   grid-column: full-start / full-end;
+
+  &__picture {
+    background-color: red;
+  }
+
+  &__content {
+    background-color: blue;
+  }
 }
 
 .img__galleries {
@@ -184,4 +191,12 @@ body {
     background-color: rgba(#fff, 0.05);
     transform: translateY(-1.2rem);
   }
+}
+
+.copyright {
+  text-align: center;
+  overflow: hidden;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
