Added margin bottom to each story right part

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -8,3 +8,20 @@ html {
   /* 1rem = 10px; */
   font-size: 62.5%;
 }
+
+.mb-xs {
+  margin-bottom: 1rem;
+}
+
+.mb-sm {
+  margin-bottom: 2rem;
+}
+
+.mb-md {
+}
+
+.mb-lg {
+}
+
+.mb-xlg {
+}
