--- a/index.css
+++ b/index.css
@@ -10,6 +10,14 @@ html {
   font-size: 62.5%;
 }
 
+.mb-xs {
+  margin-bottom: 1rem;
+}
+
+.mb-sm {
+  margin-bottom: 2rem;
+}
+
 body {
   font-family: "Courier New", Courier, monospace;
   font-weight: 300;
@@ -57,6 +65,7 @@ body {
   height: 3rem;
   grid-row: 1/3;
 }
+
 .homes {
   grid-column: center-start/center-end;
   margin: 10rem 0;
@@ -109,14 +118,39 @@ body {
 }
 
 .story__picture {
-  background-color: blue;
   grid-column: full-start/col-end 4;
+  background-color: red;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-
+.story__picture img {
+  grid-row: 2/6;
+  grid-column: 2/6;
+  width: 100%;
+  object-fit: cover;
+}
 .story__content {
-  background-color: pink;
-  grid-column: 7/12;
   grid-column: col-end 4/full-end;
+  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: 1.5rem;
+}
+.story__content .btn {
+  padding: 1rem 2rem;
+  background-color: aqua;
+  border: none;
+  border-radius: none;
+}
+.story__content h3 {
+  background-color: red;
+}
+.story__text {
+  font-size: 1.5rem;
+  font-style: italic;
 }
 
 .img__galleries {
