--- a/sass/input.scss
+++ b/sass/input.scss
@@ -63,9 +63,6 @@ body {
     height: 3rem;
     grid-row: 1 / 3;
   }
-
-  &__content {
-  }
 }
 
 .homes {
@@ -134,33 +131,50 @@ body {
   }
 }
 
-// .story {
-//   // background-color: bisque;
-//   // grid-column: full-start / full-end;
+.story {
+  &__picture {
+    grid-column: full-start / col-end 4;
+    background-color: red;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 
-//   // display: grid;
+    img {
+      grid-row: 2/6;
+      grid-column: 2/6;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+  &__content {
+    grid-column: col-end 4 / full-end;
+    background-color: blue;
+    // display: grid;
+    // align-content: center;
+    // justify-items: start;
+    // display: flex;
+    // flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    padding: 1.5rem;
 
-//   &__pictures {
-//     // background-color: blue;
-//     background-color: pink;
-//   }
-
-//   &__content {
-//     background-color: blue;
-//   }
-// }
-
-.story__picture {
-  background-color: blue;
-
-  grid-column: full-start / col-end 4;
-}
-
-.story__content {
-  background-color: pink;
-  grid-column: 7/12;
-
-  grid-column: col-end 4 / full-end;
+    .btn {
+      padding: 1rem 2rem;
+      background-color: aqua;
+      border: none;
+      border-radius: none;
+      // align-self: flex-start;
+    }
+    h3 {
+      background-color: red;
+    }
+  }
+  &__text {
+    font-size: 1.5rem;
+    font-style: italic;
+  }
 }
 
 .img__galleries {
