--- a/sass/base.scss
+++ b/sass/base.scss
@@ -9,6 +9,10 @@ html {
   font-size: 62.5%;
 }
 
+// %heading {
+//   font-weight: 300;
+// }
+
 .mb-xs {
   margin-bottom: 1rem;
 }
@@ -24,4 +28,16 @@ html {
 }
 
 .mb-xlg {
+}
+
+.heading-1 {
+}
+
+.heading-2 {
+  font-weight: 300;
+}
+
+.heading-3 {
+  font-size: 2rem;
+  font-weight: 300;
 }
