--- a/sass/input.scss
+++ b/sass/input.scss
@@ -2,6 +2,8 @@
 
 @use "./base.scss";
 
+@use "./Typography.scss";
+
 body {
   font-family: "Courier New", Courier, monospace;
   font-weight: 300;
@@ -136,16 +138,25 @@ body {
     grid-column: full-start / col-end 4;
     background-color: red;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-
-    img {
-      grid-row: 2/6;
-      grid-column: 2/6;
-      width: 100%;
-      object-fit: cover;
-    }
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    align-items: center;
   }
+
+  &__img--1 {
+    width: 100%;
+    grid-row: 2/6;
+    grid-column: 2/6;
+    box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+  }
+
+  &__img--2 {
+    width: 115%;
+    grid-row: 4/6;
+    grid-column: 4/7;
+    z-index: 20;
+  }
+
   &__content {
     grid-column: col-end 4 / full-end;
     background-color: blue;
