--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,6 +1,10 @@
-$color-yellow-normal: yellow;
+$warm-yellowish-brown: #c69963;
 
 $color-red-dark: red;
+
+$light-beige: #edeade;
+
+$text--beige: rgb(170, 170, 170);
 
 * {
   margin: 0px;
