--- a/index.css
+++ b/index.css
@@ -19,8 +19,16 @@ html {
 }
 
 /* Base Style */
-.heading-3, .heading-2 {
+.heading-3, .heading-2, .heading-1 {
   font-weight: 300;
+}
+
+.heading-1 {
+  font-size: 4rem;
+}
+
+.text--white {
+  color: white;
 }
 
 .heading-2 {
@@ -29,7 +37,7 @@ html {
 
 .heading-3 {
   font-size: 1.5rem;
-  color: yellow;
+  color: #c69963;
 }
 
 body {
@@ -51,6 +59,38 @@ body {
 .header {
   background-color: aqua;
   grid-column: full-start/col-end 6;
+  display: grid;
+  padding: 5rem;
+  grid-template-rows: 1fr min-content minmax(min-content, max-content) 1fr max-content;
+  grid-row-gap: 2rem;
+}
+.header__logo {
+  height: 2rem;
+  justify-self: center;
+}
+.header .btn {
+  align-self: start;
+  justify-self: start;
+  padding: 12px;
+  background-color: #c69963;
+  border: none;
+}
+.header .seenon__text {
+  color: rgb(170, 170, 170);
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  align-items: center;
+  grid-column-gap: 1rem;
+}
+.header .seenon__text::after, .header .seenon__text::before {
+  content: "";
+  display: block;
+  height: 0.1rem;
+  background-color: currentColor;
+}
+.header .seenon__logo img {
+  width: 10rem;
+  height: 2rem;
 }
 
 .top-relators {
@@ -162,7 +202,7 @@ body {
 }
 .story__content .btn {
   padding: 1rem 2rem;
-  background-color: aqua;
+  background-color: #c69963;
   border: none;
   border-radius: none;
 }
