Done Realtors Right Part

--- a/sass/Typography.scss
+++ b/sass/Typography.scss
@@ -20,6 +20,11 @@
 
 .heading-3 {
   @extend %heading;
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: base.$warm-yellowish-brown;
+}
+
+.heading-4 {
+  @extend %heading;
+  font-size: 1.5rem;
 }
