--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ html {
 }
 
 /* Base Style */
-.heading-3, .heading-2, .heading-1 {
+.heading-4, .heading-3, .heading-2, .heading-1 {
   font-weight: 300;
 }
 
@@ -36,8 +36,12 @@ html {
 }
 
 .heading-3 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: #c69963;
+}
+
+.heading-4 {
+  font-size: 1.5rem;
 }
 
 body {
@@ -88,7 +92,12 @@ body {
   height: 0.1rem;
   background-color: currentColor;
 }
-.header .seenon__logo img {
+.header .seenon__logos {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-items: center;
+}
+.header .seenon__logos img {
   width: 10rem;
   height: 2rem;
   filter: brightness(70%);
@@ -97,6 +106,27 @@ body {
 .top-relators {
   background-color: bisque;
   grid-column: col-start 7/12;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-row-gap: 1rem;
+}
+.top-relators h3 {
+  align-self: end;
+  justify-self: center;
+}
+.top-relators .relator__list {
+  background-color: red;
+  display: grid;
+  grid-template-columns: min-content max-content;
+  justify-content: center;
+  align-items: center;
+  grid-column-gap: 1rem;
+  grid-row-gap: 2rem;
+}
+.top-relators img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
 }
 
 .features {
