--- a/sass/input.scss
+++ b/sass/input.scss
@@ -70,7 +70,16 @@ body {
     }
   }
 
-  .seenon__logo img {
+  .seenon__logos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    // justify-i: center;
+    // background-color: red;
+    justify-items: center;
+    // align-items: center;
+  }
+
+  .seenon__logos img {
     width: 10rem;
     height: 2rem;
     filter: brightness(70%);
@@ -80,6 +89,36 @@ body {
 .top-relators {
   background-color: bisque;
   grid-column: col-start 7/12;
+
+  display: grid;
+
+  grid-template-rows: 1fr 1fr 1fr;
+
+  grid-row-gap: 1rem;
+
+  h3 {
+    align-self: end;
+    justify-self: center;
+  }
+
+  .relator__list {
+    background-color: red;
+    display: grid;
+
+    grid-template-columns: min-content max-content;
+
+    justify-content: center;
+
+    align-items: center;
+    grid-column-gap: 1rem;
+    grid-row-gap: 2rem;
+  }
+
+  img {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+  }
 }
 
 .features {
