--- a/sass/input.scss
+++ b/sass/input.scss
@@ -4,6 +4,8 @@
 
 @use "./Typography.scss";
 
+$larget-size: 945px;
+
 body {
   font-family: "Courier New", Courier, monospace;
   font-weight: 300;
@@ -13,15 +15,29 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns:
-    [sidebar-start]10rem [sidebar-end full-start] minmax(3rem, 1fr)
+    [sidebar-start] 10rem [sidebar-end full-start] minmax(3rem, 1fr)
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end]
     minmax(3rem, 1fr) [full-end];
+
+  @media only screen and (max-width: $larget-size) {
+    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+
+    grid-template-columns:
+      [full-start] minmax(3rem, 1fr)
+      [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+      [center-end]
+      minmax(3rem, 1fr) [full-end];
+  }
 }
 
 .sidebar {
   background-color: red;
-  grid-row: 1/7;
+  grid-row: 1/-1;
+  @media only screen and (max-width: $larget-size) {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+  }
 }
 
 .header {
@@ -32,9 +48,9 @@ body {
 
   grid-template-rows: 1fr min-content minmax(min-content, max-content) 1fr max-content;
 
-  // grid-template-columns: max-content;
-
-  // justify-content: center;
+  @media only screen and (max-width: $larget-size) {
+    grid-column: full-start / full-end;
+  }
 
   grid-row-gap: 2rem;
 
@@ -106,12 +122,13 @@ body {
     display: grid;
 
     grid-template-columns: min-content max-content;
-
     justify-content: center;
-
     align-items: center;
     grid-column-gap: 1rem;
     grid-row-gap: 2rem;
+    @media only screen and (max-width: $larget-size) {
+      grid-column: full-start / full-end;
+    }
   }
 
   img {
