--- a/sass/input.scss
+++ b/sass/input.scss
@@ -21,7 +21,10 @@ body {
     minmax(3rem, 1fr) [full-end];
 
   @media only screen and (max-width: $larget-size) {
-    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+    grid-template-rows: 6rem 80vh min-content min-content 40vw repeat(
+        3,
+        min-content
+      );
 
     grid-template-columns:
       [full-start] minmax(3rem, 1fr)
@@ -112,6 +115,11 @@ body {
 
   grid-row-gap: 1rem;
 
+  @media only screen and (max-width: $larget-size) {
+    grid-row: 3/4;
+    grid-column: full-start / full-end;
+  }
+
   h3 {
     align-self: end;
     justify-self: center;
@@ -127,7 +135,7 @@ body {
     grid-column-gap: 1rem;
     grid-row-gap: 2rem;
     @media only screen and (max-width: $larget-size) {
-      grid-column: full-start / full-end;
+      // grid-template-columns: min-content max-content min-content max-content min-content max-content;
     }
   }
 
