--- a/index.css
+++ b/index.css
@@ -151,6 +151,16 @@ body {
   grid-column-gap: 1rem;
   grid-row-gap: 2rem;
 }
+@media only screen and (max-width: 945px) {
+  .top-relators .relator__list {
+    grid-template-columns: min-content max-content min-content max-content min-content max-content;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .top-relators .relator__list {
+    grid-template-columns: min-content max-content;
+  }
+}
 .top-relators img {
   width: 10rem;
   height: 10rem;
@@ -238,6 +248,11 @@ body {
   grid-template-rows: repeat(6, 1fr);
   align-items: center;
 }
+@media only screen and (max-width: 945px) {
+  .story__picture {
+    grid-column: 1/-1;
+  }
+}
 .story__img--1 {
   width: 100%;
   grid-row: 2/6;
@@ -258,6 +273,11 @@ body {
   justify-content: center;
   align-items: start;
   padding: 6rem 7vw;
+}
+@media only screen and (max-width: 945px) {
+  .story__content {
+    grid-row: 7/8;
+  }
 }
 .story__content .btn {
   padding: 1rem 2rem;
