--- a/sass/input.scss
+++ b/sass/input.scss
@@ -4,9 +4,15 @@
 
 @use "./Typography.scss";
 
-$larget-size: 945px;
+// $larget-size: 945px;
 
-$small-size: 600px;
+// $small-size: 600px;
+
+$bp-large: 1200px;
+
+$bp-medium: 800px;
+
+$bp-small: 600px;
 
 // $small-size: 500px;
 
@@ -19,16 +25,13 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns:
-    [sidebar-start] 10rem [sidebar-end full-start] minmax(3rem, 1fr)
+    [sidebar-start] min-content [sidebar-end full-start] minmax(3rem, 1fr)
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end]
     minmax(3rem, 1fr) [full-end];
 
-  @media only screen and (max-width: $larget-size) {
-    grid-template-rows: 6rem 80vh min-content min-content 40vw repeat(
-        3,
-        min-content
-      );
+  @media only screen and (max-width: $bp-large) {
+    grid-template-rows: 5rem 80vh min-content 40vw repeat(3, min-content);
 
     grid-template-columns:
       [full-start] minmax(3rem, 1fr)
@@ -36,14 +39,29 @@ body {
       [center-end]
       minmax(3rem, 1fr) [full-end];
   }
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-rows: 5rem calc(100vh - 5rem);
+  }
 }
 
 .sidebar {
   background-color: red;
   grid-row: 1/-1;
-  @media only screen and (max-width: $larget-size) {
+  font-size: 2rem;
+
+  .about-us,
+  .testimionals {
+    display: none;
+  }
+
+  @media only screen and (max-width: $bp-large) {
     grid-column: 1/-1;
     grid-row: 1/2;
+    font-size: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
   }
 }
 
@@ -55,7 +73,7 @@ body {
 
   grid-template-rows: 1fr min-content minmax(min-content, max-content) 1fr max-content;
 
-  @media only screen and (max-width: $larget-size) {
+  @media only screen and (max-width: $bp-medium) {
     grid-column: full-start / full-end;
   }
 
@@ -96,15 +114,19 @@ body {
   .seenon__logos {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: red;
     // justify-i: center;
     // background-color: red;
     justify-items: center;
+    align-items: center;
+
     // align-items: center;
   }
 
   .seenon__logos img {
-    width: 10rem;
-    height: 2rem;
+    max-width: 100%;
+    max-height: 2.5rem;
+
     filter: brightness(70%);
   }
 }
@@ -119,9 +141,14 @@ body {
 
   grid-row-gap: 1rem;
 
-  @media only screen and (max-width: $larget-size) {
+  @media only screen and (max-width: $bp-medium) {
     grid-row: 3/4;
     grid-column: full-start / full-end;
+  }
+
+  @media only screen and (max-width: 600px) {
+    grid-template-rows: 1fr;
+    padding-top: 12px;
   }
 
   h3 {
@@ -138,10 +165,11 @@ body {
     align-items: center;
     grid-column-gap: 1rem;
     grid-row-gap: 2rem;
-    @media only screen and (max-width: $larget-size) {
+    @media only screen and (max-width: $bp-medium) {
       grid-template-columns: min-content max-content min-content max-content min-content max-content;
     }
-    @media only screen and (max-width: $small-size) {
+
+    @media only screen and (max-width: $bp-small) {
       grid-template-columns: min-content max-content;
     }
   }
@@ -260,12 +288,13 @@ body {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
     align-items: center;
-    // @media only screen and (max-width: 800px) {
-    //   grid-column: 1/9;
-    // }
+    // background-size: cover;
 
-    @media only screen and (max-width: $larget-size) {
-      grid-column: 1/-1;
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 3rem;
+
+      // grid-row: 5/6;
     }
   }
 
@@ -274,6 +303,11 @@ body {
     grid-row: 2/6;
     grid-column: 2/6;
     box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1/-1;
+    }
   }
 
   &__img--2 {
@@ -281,24 +315,25 @@ body {
     grid-row: 4/6;
     grid-column: 4/7;
     z-index: 20;
+
+    @media only screen and (max-width: $bp-medium) {
+      // grid-column: 1 / 3;
+      grid-row: 1/-1;
+      width: 100%;
+    }
   }
 
   &__content {
     grid-column: col-end 4 / full-end;
-    background-color: blue;
-    // display: grid;
-    // align-content: center;
-    // justify-items: start;
-    // display: flex;
-    // flex-direction: column;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
     padding: 6rem 7vw;
-
-    @media only screen and (max-width: $larget-size) {
-      grid-row: 7/8;
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: full-start / full-end;
+      grid-row: 5/6;
     }
 
     .btn {
