--- a/sass/input.scss
+++ b/sass/input.scss
@@ -25,10 +25,7 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns:
-    [sidebar-start] minmax(12rem, 22rem) [sidebar-end full-start] minmax(
-      3rem,
-      1fr
-    )
+    [sidebar-start] 20rem [sidebar-end full-start] minmax(3rem, 1fr)
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end]
     minmax(3rem, 1fr) [full-end];
@@ -54,10 +51,14 @@ body {
   font-size: 2rem;
 
   &__menu {
-    position: absolute;
     list-style-type: none;
     background-color: white;
-    top: 5%;
+
+    @media only screen and (max-width: $bp-large) {
+      position: absolute;
+      left: -80%;
+      padding: 1rem;
+    }
 
     &-none {
       display: none;
