--- a/index.css
+++ b/index.css
@@ -131,50 +131,54 @@ body {
   background-color: aqua;
   grid-column: full-start/col-end 6;
   display: grid;
+  justify-items: center;
   padding: 5rem;
-  grid-template-rows: 1fr min-content minmax(min-content, max-content) 1fr max-content;
-  grid-row-gap: 2rem;
+}
+.header .slider-container {
+  position: relative;
+  background-color: red;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+.header .slider {
+  display: flex;
+  width: 100%;
+  height: 100%; /* 100% * Number of Images */
+  transition: transform 0.5s ease-in-out;
+}
+.header .slide {
+  min-width: 100%; /* Same as slider-container */
+  height: 100%;
+  object-fit: cover;
+}
+.header button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 50%;
+}
+.header button:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.header .prev {
+  left: 10px;
+}
+.header .next {
+  right: 10px;
 }
 @media only screen and (max-width: 800px) {
   .header {
     grid-column: full-start/full-end;
   }
-}
-.header__logo {
-  height: 2rem;
-  justify-self: center;
-}
-.header .btn {
-  align-self: start;
-  justify-self: start;
-  padding: 12px;
-  background-color: #c69963;
-  border: none;
-}
-.header .seenon__text {
-  color: rgb(170, 170, 170);
-  display: grid;
-  grid-template-columns: 1fr max-content 1fr;
-  align-items: center;
-  grid-column-gap: 1rem;
-}
-.header .seenon__text::after, .header .seenon__text::before {
-  content: "";
-  display: block;
-  height: 0.1rem;
-  background-color: currentColor;
-}
-.header .seenon__logos {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  background-color: red;
-  justify-items: center;
-  align-items: center;
-}
-.header .seenon__logos img {
-  max-width: 100%;
-  max-height: 2.5rem;
-  filter: brightness(70%);
 }
 
 .top-relators {
