--- a/sass/input.scss
+++ b/sass/input.scss
@@ -111,65 +111,61 @@ body {
   background-color: aqua;
   grid-column: full-start / col-end 6;
   display: grid;
+
+  justify-items: center;
+
   padding: 5rem;
 
-  grid-template-rows: 1fr min-content minmax(min-content, max-content) 1fr max-content;
+  .slider-container {
+    position: relative;
+    background-color: red;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  .slider {
+    display: flex;
+    width: 100%;
+    height: 100%; /* 100% * Number of Images */
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .slide {
+    min-width: 100%; /* Same as slider-container */
+    height: 100%;
+    object-fit: cover;
+  }
+
+  button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    border-radius: 50%;
+  }
+
+  button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  .prev {
+    left: 10px;
+  }
+
+  .next {
+    right: 10px;
+  }
 
   @media only screen and (max-width: $bp-medium) {
     grid-column: full-start / full-end;
-  }
-
-  grid-row-gap: 2rem;
-
-  &__logo {
-    height: 2rem;
-    justify-self: center;
-  }
-
-  .btn {
-    align-self: start;
-    justify-self: start;
-    padding: 12px;
-    background-color: base.$warm-yellowish-brown;
-    border: none;
-  }
-
-  .seenon__text {
-    color: base.$text--beige;
-
-    display: grid;
-
-    grid-template-columns: 1fr max-content 1fr;
-    align-items: center;
-
-    grid-column-gap: 1rem;
-
-    &::after,
-    &::before {
-      content: "";
-      display: block;
-      height: 0.1rem;
-      background-color: currentColor;
-    }
-  }
-
-  .seenon__logos {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    background-color: red;
-    // justify-i: center;
-    // background-color: red;
-    justify-items: center;
-    align-items: center;
-
-    // align-items: center;
-  }
-
-  .seenon__logos img {
-    max-width: 100%;
-    max-height: 2.5rem;
-
-    filter: brightness(70%);
   }
 }
 
