--- a/sass/input.scss
+++ b/sass/input.scss
@@ -25,7 +25,7 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns:
-    [sidebar-start] 20rem [sidebar-end full-start] minmax(3rem, 1fr)
+    [appmenu-start] 20rem [appmenu-end full-start] minmax(3rem, 1fr)
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end]
     minmax(3rem, 1fr) [full-end];
@@ -323,7 +323,15 @@ body {
 .story {
   &__picture {
     grid-column: full-start / col-end 4;
-    background-color: red;
+
+    background-color: #c69963;
+
+    background-image: linear-gradient(
+        rgba(198, 153, 99, 0.5),
+        rgba(198, 153, 99, 0.5)
+      ),
+      url(../Images/back.jpg);
+    background-size: cover;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
