Make fetch and display to ui using seperate js file

--- a/css/index.css
+++ b/css/index.css
@@ -56,12 +56,12 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-rows: 80vh min-content 40vw min-content repeat(3, min-content);
   grid-template-columns: [sidebar-start] 20rem [sidebar-end full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
 }
 @media only screen and (max-width: 1200px) {
   .container {
-    grid-template-rows: 5rem 80vh min-content 40vw repeat(3, min-content);
+    grid-template-rows: 5rem 80vh min-content 40vw min-content repeat(3, min-content);
     grid-template-columns: [full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
   }
 }
@@ -254,7 +254,8 @@ body {
 
 .homes {
   grid-column: center-start/center-end;
-  margin: 10rem 0;
+  margin: 5rem 0;
+  background-color: blue;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 2.2rem;
@@ -407,6 +408,22 @@ body {
   width: 70%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.search {
+  margin: 20px 0;
+  background-color: red;
+  grid-column: center-start/center-end;
+  text-align: center;
+}
+.search input {
+  background-color: blue;
+  width: 30%;
+  padding: 1.2rem;
+  border: none;
+}
+.search input:focus {
+  outline: none;
 }
 
 /*# sourceMappingURL=index.css.map */
