--- a/sass/input.scss
+++ b/sass/input.scss
@@ -23,7 +23,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-rows: 80vh min-content 40vw min-content repeat(3, min-content);
   grid-template-columns:
     [sidebar-start] 20rem [sidebar-end full-start] minmax(3rem, 1fr)
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
@@ -31,7 +31,10 @@ body {
     minmax(3rem, 1fr) [full-end];
 
   @media only screen and (max-width: $bp-large) {
-    grid-template-rows: 5rem 80vh min-content 40vw repeat(3, min-content);
+    grid-template-rows: 5rem 80vh min-content 40vw min-content repeat(
+        3,
+        min-content
+      );
 
     grid-template-columns:
       [full-start] minmax(3rem, 1fr)
@@ -256,7 +259,9 @@ body {
 
 .homes {
   grid-column: center-start / center-end;
-  margin: 10rem 0;
+  margin: 5rem 0;
+
+  background-color: blue;
 
   display: grid;
 
@@ -447,4 +452,25 @@ body {
   width: 70%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.search {
+  margin: 20px 0;
+
+  background-color: red;
+
+  grid-column: center-start / center-end;
+
+  text-align: center;
+
+  input {
+    background-color: blue;
+    width: 30%;
+    padding: 1.2rem;
+    border: none;
+
+    &:focus {
+      outline: none;
+    }
+  }
 }
