structure made 4 checkbox for 4 room checkbox made maintaing the responsiveness

--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content 40vw min-content repeat(3, min-content);
+  grid-template-rows: 80vh min-content 40vw min-content min-content repeat(3, min-content);
   grid-template-columns: [sidebar-start] 20rem [sidebar-end full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
 }
 @media only screen and (max-width: 1200px) {
@@ -424,6 +424,21 @@ body {
 }
 .search input:focus {
   outline: none;
+}
+
+.checkbox__with__label {
+  grid-column: center-start/center-end;
+  background-color: blue;
+  display: grid;
+  grid-template-columns: max-content min-content min-content min-content min-content min-content min-content min-content min-content;
+  align-items: center;
+  justify-content: center;
+}
+.checkbox__with__label input {
+  background-color: blue;
+}
+.checkbox__with__label label {
+  background-color: pink;
 }
 
 /*# sourceMappingURL=index.css.map */
