--- a/sass/input.scss
+++ b/sass/input.scss
@@ -489,6 +489,11 @@ body {
 
   justify-content: center;
 
+  h1 {
+    font-weight: 200;
+    font-size: 2rem;
+  }
+
   input {
     background-color: blue;
   }
