--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,7 @@ body {
 .container {
   display: grid;
   grid-template-rows: 80vh min-content 40vw min-content min-content repeat(3, min-content);
-  grid-template-columns: [sidebar-start] 20rem [sidebar-end full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
+  grid-template-columns: [appmenu-start] 20rem [appmenu-end full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
 }
 @media only screen and (max-width: 1200px) {
   .container {
@@ -71,53 +71,53 @@ body {
   }
 }
 
-.sidebar {
+.appmenu {
   background-color: red;
   grid-row: 1/-1;
   font-size: 2rem;
 }
-.sidebar__item__anchor {
+.appmenu__item__anchor {
   text-decoration: none;
   display: block;
   text-align: center;
 }
 @media only screen and (max-width: 1200px) {
-  .sidebar__lists {
+  .appmenu__lists {
     display: flex;
     gap: 15rem;
   }
 }
-.sidebar__about__menu {
+.appmenu__about__menu {
   list-style-type: none;
   background-color: white;
 }
 @media only screen and (max-width: 1200px) {
-  .sidebar__about__menu {
+  .appmenu__about__menu {
     position: absolute;
     left: -80%;
     padding: 1rem;
   }
 }
-.sidebar__about__menu-none {
+.appmenu__about__menu-none {
   display: none;
 }
-.sidebar__services__menu {
+.appmenu__services__menu {
   list-style-type: none;
   background-color: white;
 }
 @media only screen and (max-width: 1200px) {
-  .sidebar__services__menu {
+  .appmenu__services__menu {
     position: absolute;
     left: -20%;
     width: max-content;
     padding: 1rem;
   }
 }
-.sidebar__services__menu-none {
+.appmenu__services__menu-none {
   display: none;
 }
 @media only screen and (max-width: 1200px) {
-  .sidebar {
+  .appmenu {
     grid-column: 1/-1;
     grid-row: 1/2;
     font-size: 2.5rem;
