--- a/sass/input.scss
+++ b/sass/input.scss
@@ -28,7 +28,7 @@ body {
       min-content
     );
   grid-template-columns:
-    [sidebar-start] 20rem [sidebar-end full-start] minmax(3rem, 1fr)
+    [appmenu-start] 20rem [appmenu-end full-start] minmax(3rem, 1fr)
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end]
     minmax(3rem, 1fr) [full-end];
@@ -51,7 +51,7 @@ body {
   }
 }
 
-.sidebar {
+.appmenu {
   background-color: red;
   grid-row: 1/-1;
   font-size: 2rem;
