Reduced the function

--- a/sass/input.scss
+++ b/sass/input.scss
@@ -264,7 +264,7 @@ body {
   grid-column: center-start / center-end;
   margin: 5rem 0;
 
-  background-color: blue;
+  // background-color: blue;
 
   display: grid;
 
