--- a/css/index.css
+++ b/css/index.css
@@ -56,75 +56,14 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content 40vw min-content min-content repeat(3, min-content);
-  grid-template-columns: [appmenu-start] 20rem [appmenu-end full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
-}
-@media only screen and (max-width: 1200px) {
-  .container {
-    grid-template-rows: 5rem 80vh min-content 40vw min-content repeat(3, min-content);
-    grid-template-columns: [full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
-  }
-}
-@media only screen and (max-width: 800px) {
-  .container {
-    grid-template-rows: 5rem calc(100vh - 5rem);
-  }
+  grid-template-rows: min-content 50vw min-content 600px repeat(3, min-content);
+  grid-template-columns: [full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
 }
 
 .appmenu {
   background-color: red;
-  grid-row: 1/-1;
   font-size: 2rem;
-}
-.appmenu__item__anchor {
-  text-decoration: none;
-  display: block;
-  text-align: center;
-}
-@media only screen and (max-width: 1200px) {
-  .appmenu__lists {
-    display: flex;
-    gap: 15rem;
-  }
-}
-.appmenu__about__menu {
-  list-style-type: none;
-  background-color: white;
-}
-@media only screen and (max-width: 1200px) {
-  .appmenu__about__menu {
-    position: absolute;
-    left: -80%;
-    padding: 1rem;
-  }
-}
-.appmenu__about__menu-none {
-  display: none;
-}
-.appmenu__services__menu {
-  list-style-type: none;
-  background-color: white;
-}
-@media only screen and (max-width: 1200px) {
-  .appmenu__services__menu {
-    position: absolute;
-    left: -20%;
-    width: max-content;
-    padding: 1rem;
-  }
-}
-.appmenu__services__menu-none {
-  display: none;
-}
-@media only screen and (max-width: 1200px) {
-  .appmenu {
-    grid-column: 1/-1;
-    grid-row: 1/2;
-    font-size: 2.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-  }
+  grid-column: 1/-1;
 }
 
 .header {
