--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: min-content 50vw min-content 600px repeat(3, min-content);
+  grid-template-rows: min-content 70vh min-content 600px repeat(3, min-content);
   grid-template-columns: [full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
 }
 
@@ -195,8 +195,9 @@ body {
   grid-column: center-start/center-end;
   margin: 5rem 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(39rem, 0fr));
   gap: 2.2rem;
+  justify-content: center;
 }
 
 .home {
@@ -204,6 +205,7 @@ body {
   grid-template-columns: 1fr 1fr;
   transition: all 0.2s;
   row-gap: 22px;
+  font-size: 2rem;
 }
 .home:hover {
   transform: translateY(-1rem);
