--- a/sass/input.scss
+++ b/sass/input.scss
@@ -25,10 +25,27 @@ body {
   display: grid;
   grid-template-rows: min-content 70vh min-content 600px repeat(3, min-content);
   grid-template-columns:
-    [full-start] minmax(3rem, 1fr)
+    [full-start] minmax(10rem, 1fr)
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end]
-    minmax(3rem, 1fr) [full-end];
+    minmax(10rem, 1fr) [full-end];
+
+  @media only screen and (max-width: $bp-large) {
+    grid-template-rows: 5rem 80vh min-content 40vw min-content repeat(
+        3,
+        min-content
+      );
+
+    grid-template-columns:
+      [full-start] minmax(3rem, 1fr)
+      [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+      [center-end]
+      minmax(3rem, 1fr) [full-end];
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-rows: 5rem calc(100vh - 5rem);
+  }
 }
 
 .appmenu {
@@ -158,9 +175,15 @@ body {
   margin-top: 12rem;
   margin-bottom: 12rem;
 
+  // margin-left: auto;
+
+  // margin-right: auto;
+
+  background-color: blue;
+
   // grid-template-columns: repeat(3, 1fr);
 
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 3fr));
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 3fr));
 
   gap: 1rem;
 
