--- a/css/home.css
+++ b/css/home.css
@@ -1,19 +1,457 @@
-@charset "UTF-8";
-/* Error: Can't find stylesheet to import.
- *   ,
- * 1 | @use "./base.scss";
- *   | ^^^^^^^^^^^^^^^^^^
- *   '
- *   sass/HomeTypography.scss 1:1  @use
- *   sass/input.scss 5:1           root stylesheet */
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono", "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
+/* Base Style */
+html {
+  /* 1rem = 10px; */
+  font-size: 62.5%;
+}
+@media only screen and (max-width: 1200px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+.mb-xs {
+  margin-bottom: 1rem;
+}
+
+.mb-sm {
+  margin-bottom: 2rem;
+}
+
+.heading-4, .heading-3, .heading-2, .heading-1 {
+  font-weight: 300;
+}
+
+.heading-1 {
+  font-size: 4rem;
+}
+
+.text--white {
+  color: white;
+}
+
+.heading-2 {
+  font-size: 3rem;
+}
+
+.heading-3 {
+  font-size: 2rem;
+  color: #c69963;
+}
+
+.heading-4 {
+  font-size: 1.5rem;
+}
+
+.story__picture {
+  grid-column: full-start/col-end 4;
+  background-color: #c69963;
+  background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../Images/back.jpg);
+  background-size: cover;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  align-items: center;
+}
+@media only screen and (max-width: 800px) {
+  .story__picture {
+    grid-column: 1/-1;
+    padding: 3rem;
+  }
+}
+.story__img--1 {
+  width: 100%;
+  grid-row: 2/6;
+  grid-column: 2/6;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+}
+@media only screen and (max-width: 800px) {
+  .story__img--1 {
+    grid-column: 1/5;
+    grid-row: 1/-1;
+  }
+}
+.story__img--2 {
+  width: 115%;
+  grid-row: 4/6;
+  grid-column: 4/7;
+  z-index: 20;
+}
+@media only screen and (max-width: 800px) {
+  .story__img--2 {
+    grid-row: 1/-1;
+    width: 100%;
+  }
+}
+.story__content {
+  grid-column: col-end 4/full-end;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: 6rem 7vw;
+}
+@media only screen and (max-width: 800px) {
+  .story__content {
+    grid-column: full-start/full-end;
+    grid-row: 5/6;
+  }
+}
+.story__content .btn {
+  padding: 1rem 2rem;
+  background-color: #c69963;
+  border: none;
+  border-radius: none;
+}
+.story__text {
+  font-size: 1.5rem;
+  font-style: italic;
+}
+
+body {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 300;
+}
+
+.container {
+  display: grid;
+  grid-template-rows: min-content 60vh min-content min-content repeat(3, min-content);
+  grid-template-columns: [full-start] minmax(10rem, 20rem) [center-start] repeat(8, [col-start] minmax(min-content, 1fr) [col-end]) [center-end] minmax(10rem, 1fr) [full-end];
+}
+@media only screen and (max-width: 1200px) {
+  .container {
+    grid-template-rows: min-content 60vh min-content 40vw min-content repeat(3, min-content);
+    grid-template-columns: [full-start] minmax(3rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(3rem, 1fr) [full-end];
+  }
+}
+@media only screen and (max-width: 800px) {
+  .container {
+    grid-template-rows: min-content 50vh;
+  }
+}
+
+.appmenu {
+  background-color: red;
+  font-size: 2rem;
+  grid-column: 1/-1;
+  align-items: center;
+  display: grid;
+  column-gap: 5rem;
+  grid-template-columns: min-content 1fr;
+  padding: 2rem;
+}
+.appmenu__logo {
+  background-color: yellow;
+}
+.appmenu__normal {
+  background-color: pink;
+  display: grid;
+  grid-template-columns: max-content max-content max-content max-content min-content;
+  justify-content: center;
+  column-gap: 50px;
+}
+@media only screen and (max-width: 1200px) {
+  .appmenu__normal {
+    display: none;
+  }
+}
+.appmenu__normal__first {
+  background-color: beige;
+}
+.appmenu__normal__second {
+  background-color: yellow;
+}
+.appmenu__normal__third {
+  background-color: #fff;
+}
+.appmenu__normal__fourth {
+  background-color: aliceblue;
+}
+.appmenu__normal__fifth {
+  background-color: chocolate;
+}
+.appmenu__normal a {
+  text-decoration: none;
+}
+
+.in__mobile__tablet__only {
+  text-align: end;
+}
+.in__mobile__tablet__only .hamberg__menu__icon {
+  width: 22px;
+  height: 22px;
+}
+@media only screen and (min-width: 1200px) {
+  .in__mobile__tablet__only {
+    display: none;
+  }
+}
+
+.header {
+  background-color: aqua;
+  grid-column: full-start/col-end 6;
+  display: grid;
+  justify-items: center;
+  padding: 5rem;
+}
+.header .slider-container {
+  position: relative;
+  background-color: red;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+.header .slider {
+  display: flex;
+  width: 100%;
+  height: 100%; /* 100% * Number of Images */
+  transition: transform 0.5s ease-in-out;
+}
+.header .slide {
+  min-width: 100%; /* Same as slider-container */
+  height: 100%;
+  object-fit: cover;
+}
+.header button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 50%;
+}
+.header button:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.header .prev {
+  left: 10px;
+}
+.header .next {
+  right: 10px;
+}
+@media only screen and (max-width: 800px) {
+  .header {
+    grid-column: full-start/full-end;
+  }
+}
+
+.top-relators {
+  background-color: bisque;
+  grid-column: col-start 7/12;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-row-gap: 1rem;
+}
+@media only screen and (max-width: 800px) {
+  .top-relators {
+    grid-row: 3/4;
+    grid-column: full-start/full-end;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .top-relators {
+    grid-template-rows: 1fr;
+    padding-top: 12px;
+  }
+}
+.top-relators h3 {
+  align-self: end;
+  justify-self: center;
+}
+.top-relators .relator__list {
+  background-color: red;
+  display: grid;
+  grid-template-columns: min-content max-content;
+  justify-content: center;
+  align-items: center;
+  grid-column-gap: 1rem;
+  grid-row-gap: 2rem;
+}
+@media only screen and (max-width: 800px) {
+  .top-relators .relator__list {
+    grid-template-columns: min-content max-content min-content max-content min-content max-content;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .top-relators .relator__list {
+    grid-template-columns: min-content max-content;
+  }
+}
+.top-relators img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+}
+
+.features {
+  grid-column: center-start/center-end;
+  display: grid;
+  margin-top: 12rem;
+  margin-bottom: 12rem;
+  background-color: blue;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 3fr));
+  gap: 1rem;
+  line-height: 2rem;
+}
+
+.feature {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-row-gap: 1rem;
+  grid-column-gap: 1rem;
+  font-size: 1.5rem;
+  font-weight: 200;
+}
+.feature__icon {
+  fill: #c69963;
+  width: 2.5rem;
+  height: 2.5rem;
+  grid-row: 1/3;
+}
+
+.homes {
+  grid-column: center-start/center-end;
+  margin: 5rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(39rem, 0fr));
+  gap: 2.2rem;
+  justify-content: center;
+}
+
+.home {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  transition: all 0.2s;
+  row-gap: 22px;
+  font-size: 2rem;
+}
+.home:hover {
+  transform: translateY(-1rem);
+}
+.home__image {
+  grid-column: 1/-1;
+  grid-row: 1/2;
+  width: 100%;
+}
+.home__button {
+  border: none;
+  grid-column: 1/-1;
+  padding: 12px;
+}
+.home__icon {
+  width: 1.4rem;
+  height: 1.4rem;
+}
+.home__roomcounts, .home__location, .home__price, .home__area {
+  display: flex;
+  margin-left: 2rem;
+  align-items: center;
+  column-gap: 1rem;
+}
+.home__location, .home__roomcounts {
+  margin-top: 1.5rem;
+}
+.home__name {
+  background-color: red;
+  grid-column: 1/3;
+  justify-self: center;
+  padding: 12px;
+  grid-row: 1/2;
+  align-self: end;
+  transform: translateY(50%);
+  color: white;
+}
+
+.img__galleries {
+  background-color: aquamarine;
+  grid-column: full-start/full-end;
+}
+
+.footer {
+  background-color: cadetblue;
+  grid-column: full-start/full-end;
+  padding: 3rem 3rem;
+}
+
+.footer .nav {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  grid-gap: 2rem;
+  align-items: center;
+}
+.footer .nav__link:link, .footer .nav__link:visited {
+  font-size: 1.4rem;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1.5rem;
   display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   ╷\a 1 │ @use \"./base.scss\";\a   │ ^^^^^^^^^^^^^^^^^^\a   ╵\a   sass/HomeTypography.scss 1:1  @use\a   sass/input.scss 5:1           root stylesheet";
+  transition: all 1s;
+}
+.footer .nav__link:hover, .footer .nav__link:active {
+  background-color: rgba(255, 255, 255, 0.05);
+  transform: translateY(-1.2rem);
+}
+
+.copyright {
+  text-align: center;
+  overflow: hidden;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.search {
+  margin: 20px 0;
+  background-color: red;
+  grid-column: center-start/center-end;
+  text-align: center;
+}
+.search input {
+  background-color: blue;
+  width: 30%;
+  padding: 1.2rem;
+  border: none;
+}
+.search input:focus {
+  outline: none;
+}
+.search a {
+  background-color: blue;
+  border: none;
+  padding-left: 12px;
+  padding-right: 12px;
+  display: inline-block;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.checkbox__with__label {
+  grid-column: center-start/center-end;
+  background-color: blue;
+  display: grid;
+  grid-template-columns: max-content min-content min-content min-content min-content min-content min-content min-content min-content;
+  align-items: center;
+  justify-content: center;
+}
+.checkbox__with__label h1 {
+  font-weight: 200;
+  font-size: 2rem;
+}
+.checkbox__with__label input {
+  background-color: blue;
+}
+.checkbox__with__label label {
+  background-color: pink;
 }
 
 /*# sourceMappingURL=home.css.map */
