--- a/sass/Homebase.scss
+++ b/sass/Homebase.scss
@@ -1,23 +1,12 @@
-$warm-yellowish-brown: #c69963;
 
-$color-red-dark: red;
+@use "./Abstract/variables.scss" as variables;
 
-$light-beige: #edeade;
 
-$text--beige: rgb(170, 170, 170);
-
-$larget-size: 1200px;
-
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
 
 html {
   /* 1rem = 10px; */
   font-size: 62.5%;
-  @media only screen and (max-width: $larget-size) {
+  @media only screen and (max-width: variables.$larget-size) {
     font-size: 50%;
   }
 }
