--- a/sass/Pages/AddHouseForm.scss
+++ b/sass/Pages/AddHouseForm.scss
@@ -3,14 +3,15 @@
 
 
 
-.container  {
+.container-form  {
     max-width: 600px;
     margin: 2rem auto;
     padding: 2rem;
-    background-color: #f9f9f9;
+    // background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: red;
 
         h1 {
             text-align: center;
@@ -75,14 +76,14 @@
 
 .submit-btn {
 
-    // background-color:black;
+    background-color:black;
 
-    // color: white;
+    color: white;
 }
 
-// .submit-btn:hover {
-//     background-color: #27ae60;
-// }
+.submit-btn:hover {
+    background-color: #27ae60;
+}
 
 .cancel-btn {
     background-color: #e74c3c;
@@ -106,43 +107,28 @@
 }
 
 
-
-
 .house-list{
-    h2{
-        text-align: left;
-        font-weight: 200;
-    }
 
+    
+    display: flex;
+    background-color: red;
+    // flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 12px;
+    gap: 1rem;
+    margin-top: 2rem;
 
 }
 
 
 
-.error-title{
-    color:red;
-    visibility: hidden;
-}
 
 
 
-.error-room{
-    color:red;
-    visibility: hidden;
-}
 
 
 
-.error-squarefeet{
-    color:red;
-    visibility: hidden;
-}
-
-
-.error-located-at{
-    color:red;
-    visibility: hidden;
-}
 
 
 
